--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,20 +13,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository
+      # Step 1: Checkout the repository
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Set up Node.js
+      # Step 2: Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 'lts/*'
 
-      # Install dependencies
+      # Step 3: Install dependencies
       - name: Install Dependencies
-        run: npm install --legacy-peer-deps
+        run: npm ci
 
-      # Run the linter
+      # Step 4: Run ESLint
       - name: Run ESLint
-        run: npx eslint . --ext .js,.jsx,.ts,.tsx
+        run: npm run lint
