--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,8 +25,8 @@ jobs:
 
       # Step 3: Install dependencies
       - name: Install Dependencies
-        run: npm ci
-
+        run: npm install --legacy-peer-deps
+        
       # Step 4: Run ESLint
       - name: Run ESLint
         run: npm run lint
