--- a/.github/workflows/test_and_coverage_sonar_ci.yml
+++ b/.github/workflows/test_and_coverage_sonar_ci.yml
@@ -1,4 +1,4 @@
-name: test_and_coverage.yml
+name: sonar qube test and coverage ci
 on:
  push:
    branches:
@@ -17,7 +17,7 @@ jobs:
         run: yarn
       - name: Test and coverage
         run: yarn vitest --coverage
-      - name: SonarQube Scan
+      - name: Sonar Scan
         uses: SonarSource/sonarqube-scan-action@v4
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
