--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: TypeScript Type Check
+name: CI TypeScript Type Check
 
 on: [pull_request]
 
@@ -11,6 +11,6 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '^20.9.0'
       - run: yarn install
       - run: yarn type-check
