--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,7 +8,7 @@
     "playwright.config.*"
   ],
   "compilerOptions": {
-    "composite": true,
+    "composite": false,
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "skipLibCheck": true,
