--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
 sonar.projectKey=VelimirMueller_aurorae_landing_page
 sonar.organization=velimirmueller
-sonar.exclusions=**\tests\coverage\**
+sonar.exclusions=**/coverage/**
