--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,7 @@
 sonar.projectKey=VelimirMueller_aurorae_landing_page
 sonar.organization=velimirmueller
 sonar.exclusions=**/coverage/**
+sonar.sources=src
+sonar.tests=tests
+sonar.test.inclusions=**/*.spec.js,**/*.test.js
+sonar.javascript.lcov.reportPaths=coverage/coverage-final.json
