tests: adjust setup

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.organization=velimirmueller
 sonar.exclusions=**/coverage/**
 sonar.sources=src
 sonar.tests=tests
-sonar.test.inclusions=**/*.spec.js,**/*.test.js
+sonar.test.inclusions=**/*.spec.ts,**/*.test.ts
 sonar.javascript.lcov.reportPaths=coverage/coverage-final.json
