sonar: adjust ci settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,5 @@
 sonar.projectKey=VelimirMueller_aurorae_landing_page
 sonar.organization=velimirmueller
-sonar.exclusions=**/coverage/**
-sonar.sources=src
-sonar.tests=tests
-sonar.test.inclusions=**/*.spec.ts,**/*.test.ts
-sonar.javascript.lcov.reportPaths=coverage/coverage-final.json
+sonar.sources=./src
+sonar.test.inclusions=**\*.spec.ts,**\*.test.ts
+sonar.javascript.lcov.reportPaths=.\coverage\coverage-final.json
