--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.projectKey=VelimirMueller_aurorae_landing_page
 sonar.organization=velimirmueller
 sonar.sources=./src
 sonar.test.inclusions=**\*.spec.ts,**\*.test.ts
-sonar.javascript.lcov.reportPaths=.\coverage\coverage-final.json
+sonar.javascript.lcov.reportPaths=**\coverage\coverage-final.json**
