--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=VelimirMueller_aurorae_landing_page
 sonar.organization=velimirmueller
 sonar.sources=./src
-sonar.test.inclusions=**\*.spec.ts,**\*.test.ts
-sonar.javascript.lcov.reportPaths=**\coverage\coverage-final.json**
+sonar.test.inclusions=**/*.spec.ts,**/*.test.ts
+sonar.javascript.lcov.reportPaths=**/coverage/coverage-final.json
