adjust sonar settings again

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=VelimirMueller_aurorae_landing_page
 sonar.organization=velimirmueller
 sonar.sources=src
-sonar.test=vitest
+sonar.test=javascript
 sonar.test.inclusions=**/*.spec.ts,**/*.test.ts
 sonar.javascript.json.reportPaths=**/coverage/coverage-final.json
