--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=VelimirMueller_aurorae_landing_page
 sonar.organization=velimirmueller
-sonar.sources=src
-sonar.tests=src
+
 sonar.test.inclusions=**/*.spec.ts,**/*.test.ts
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=**/coverage/lcov.info
+
