--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "resize-observer-polyfill": "^1.5.1",
     "sass": "1.77.8",
     "sass-embedded": "^1.77.8",
+    "sonar-scanner": "^3.1.0",
     "typescript": "^5.7.3",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-fonts": "^1.1.1",
