adjust sonar and vite settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,5 @@ sonar.organization=velimirmueller
 
 sonar.projectName=aurorae_landing_page
 sonar.javascript.lcov.reportPaths=src/coverage/lcov.info
+sonar.coverage.exclusions=src
 
