--- a/.github/workflows/test_and_coverage_sonar_ci.yml
+++ b/.github/workflows/test_and_coverage_sonar_ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: Test and coverage
-        run: yarn jest --coverage
+        run: yarn coverage
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v4
         env:
