--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,6 @@
 sonar.projectKey=VelimirMueller_aurorae_landing_page
 sonar.organization=velimirmueller
 
-sonar.sources=src
 sonar.projectName=aurorae_landing_page
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=./src/coverage/lcov.info
 
