adjust sonar and vite settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=VelimirMueller_aurorae_landing_page
 sonar.organization=velimirmueller
 
-sonar.projectName=aurorae_landing_page
+sonar.projectName=aurorae_landing_pagesonar.sources=src
 sonar.javascript.lcov.reportPaths=./src/coverage/lcov.info
 
+sonar.coverage.exclusions=src
