adjust sonar and vite settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,8 @@
 sonar.projectKey=VelimirMueller_aurorae_landing_page
+sonar.projectName=aurorae_landing_page
 sonar.organization=velimirmueller
+sonar.sources=.
+sonar.sourceEncoding=UTF-8
 
-sonar.projectName=aurorae_landing_pagesonar.sources=src
+sonar.test.inclusions=**/*.spec.ts
 sonar.javascript.lcov.reportPaths=./src/coverage/lcov.info
-
-sonar.coverage.exclusions=src
