--- a/.github/workflows/test_and_coverage_sonar_ci.yml
+++ b/.github/workflows/test_and_coverage_sonar_ci.yml
@@ -21,3 +21,4 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v4
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: sonarcloud.io
