--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,5 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 sonar.test.inclusions=**/*.spec.ts
-sonar.javascript.lcov.reportPaths=./src/coverage/lcov.info
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.host.url=https://sonarcloud.io
