sonar: fix typo

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,6 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 sonar.test.inclusions=**/*.spec.ts
-sonar.exclusions=coverage/**,tests/*
+sonar.exclusions=coverage/**,tests/**
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.host.url=https://sonarcloud.io
